--- a/vue-front/package.json
+++ b/vue-front/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-kinesis": "^1.1.5",
+    "vuesax": "^4.0.1-alpha.23"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
